# dotlottie-android

./: .gitignore  .gitmodules  README.md  build.gradle.kts  download-jna-libs.sh  gradle.properties  local.properties  plan.md  settings.gradle.kts
.changeset/: cpu-performance-mode.md
.github/workflows/: check-alignment.yml  notify-docs.yml  publish.yml
app/: build.gradle.kts
app/src/main/res/layout/: main.xml
buildSrc/: build.gradle.kts
dotlottie/: .gitignore  build.gradle.kts  consumer-rules.pro
dotlottie-android/: build.gradle.kts
dotlottie/src/main/: AndroidManifest.xml
dotlottie/src/main/cpp/: CMakeLists.txt  dotlottie_player.h  jni_bridge.cpp  version.txt
dotlottie/src/main/res/values/: attrs.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
make/: android.mk
sample/: build.gradle.kts
sample-compose/: build.gradle.kts
sample-compose/src/main/: AndroidManifest.xml
sample-compose/src/main/assets/: contact.json  sm-pigeon.json  sm-star-marked.json  sm-toggle.json  theming_example.lottie  theming_example_v2.lottie
sample-compose/src/main/res/values/: strings.xml  (+1 more)
sample/src/main/: AndroidManifest.xml
sample/src/main/assets/: check.json  piggy.lottie
scripts/: download-binaries.sh
thorvg/: .gitignore  build.gradle.kts
thorvg-android/: .gitignore  build.gradle.kts
thorvg-android/src/main/cpp/: LottieDrawable.cpp  LottieDrawable.h  thorvg-android.cpp
thorvg-android/src/main/cpp/src/renderer/: CMakeLists.txt  tvgCommon.h
thorvg-android/src/main/cpp/src/renderer/sw_engine/: CMakeLists.txt
thorvg/src/main/cpp/: CMakeLists.txt  LottieDrawable.cpp  LottieDrawable.h  thorvg-android.cpp
(+171 files in other folders)
